--- a/.github/workflows/simple_deploy_with_ssh.yml
+++ b/.github/workflows/simple_deploy_with_ssh.yml
@@ -5,6 +5,7 @@ jobs:
   deploy:
     name: Deploy to Demo 1
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Configure SSH
         run: |
@@ -22,4 +23,4 @@ jobs:
           SSH_KEY: ${{ secrets.PRIVATE_KEY }}
 
       - name: Deploy
-        run: ssh demo_1 '/usr/local/bin/devops/deploy/deploy.sh'
+        run: ssh demo_1 'source ~/bashrc && deploy'
