--- a/.github/workflows/simple_deploy_with_ssh.yml
+++ b/.github/workflows/simple_deploy_with_ssh.yml
@@ -22,4 +22,4 @@ jobs:
           SSH_KEY: ${{ secrets.PRIVATE_KEY }}
 
       - name: Deploy
-        run: ssh demo_1 'cat ~/.bash_aliases; source ~/.bash_aliases; deploy;'
+        run: ssh demo_1 '/usr/local/bin/devops/deploy/deploy.sh'
