--- a/.github/workflows/php_artisan_test.yml
+++ b/.github/workflows/php_artisan_test.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           cp .env.ci .env
           php artisan key:generate
+          php artisan migrate
 
       - name: Run Test suite
         run: php artisan test
