--- a/.github/workflows/php_md.yml
+++ b/.github/workflows/php_md.yml
@@ -13,7 +13,7 @@
 #   Unused parameters, methods, properties
 # More details at https://phpmd.org/
 
-name: PHPMD
+name: php_md
 on: [ push, pull_request ]
 
 permissions:
