--- a/.github/workflows/deploy_and_sign.yml
+++ b/.github/workflows/deploy_and_sign.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Deploy
         run: ssh demo_1 '/usr/local/bin/devops/deploy/deploy.sh'
 
-      - name: Sign
-        run: ssh demo_1 'php -r \'include "app/Demo/Utilities/IntegrityChecker.php"; $checker = new App\Demo\Utilities\IntegrityChecker("./"); $checker->sign(); $checker->verify();\''
+      - name: Sign The Code
+        run: ssh demo_1 'php artisan app:sign-code'
