--- a/.github/workflows/complex_workflow.yml
+++ b/.github/workflows/complex_workflow.yml
@@ -84,7 +84,7 @@ jobs:
   deploy:
     name: Deploy to Demo 1
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    needs: [ test, php_md ]
     steps:
       - name: Configure SSH
         run: |
