--- a/.github/workflows/complex_workflow.yml
+++ b/.github/workflows/complex_workflow.yml
@@ -53,6 +53,19 @@ jobs:
       - name: Run Test suite
         run: php artisan test
 
+
+  something_that_fails:
+    name: Something that fails
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read # for checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+
+    steps:
+      - name: Should Fail
+        run: this is a command that should fail
+
   php_md:
     name: Run PHPMD scanning
     runs-on: ubuntu-latest
@@ -84,7 +97,7 @@ jobs:
   deploy:
     name: Deploy to Demo 1
     runs-on: ubuntu-latest
-    needs: [ test, php_md ]
+    needs: [ test, php_md, something_that_fails ]
     steps:
       - name: Configure SSH
         run: |
