--- a/.github/workflows/php_md.yml
+++ b/.github/workflows/php_md.yml
@@ -17,7 +17,9 @@
 # More details at https://phpmd.org/
 
 name: php_md
-on: [ push, pull_request ]
+#on: [ push, pull_request ]
+on:
+  workflow_dispatch:
 
 permissions:
   contents: read
