--- a/.github/workflows/complex_workflow.yml
+++ b/.github/workflows/complex_workflow.yml
@@ -57,14 +57,16 @@ jobs:
   something_that_fails:
     name: Something that fails
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # for checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     steps:
+      - name: Print Working Directory
+        run: pwd
+
       - name: Should Fail
         run: this is a command that should fail
+
+      - name: List all files in current directory
+        run: ls -a
 
   php_md:
     name: Run PHPMD scanning
