--- a/.github/workflows/php_artisan_test.yml
+++ b/.github/workflows/php_artisan_test.yml
@@ -1,6 +1,8 @@
 name: php_artisan_test
-on: [ push, pull_request ]
-
+#on: [ push, pull_request ]
+on:
+  workflow_dispatch:
+    
 jobs:
   tests:
     runs-on: ubuntu-latest
