--- a/.github/workflows/complex_workflow.yml
+++ b/.github/workflows/complex_workflow.yml
@@ -81,8 +81,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@aa1fe473f9c687b6fb896056d771232c0bc41161
+        uses: shivammathur/setup-php@v2
         with:
+          php-version: 8.3
           coverage: none
           tools: phpmd
 
