--- a/.github/workflows/03_test.yml
+++ b/.github/workflows/03_test.yml
@@ -16,7 +16,7 @@ jobs:
     name: Test Job 2
     runs-on: ubuntu-latest
     steps:
-      - name: Step 3 (ls -la /)
+      - name: Step 3 (run multiple lines)
         run: |
           ls -la /
           ls -la /home/runner/work
@@ -31,8 +31,9 @@ jobs:
     needs: [ test_job_1, test_job_2 ]
     runs-on: ubuntu-latest
     steps:
-      - name: Step 5 (run multiple lines)
+      - name: Step 5 (can i install things)
         run: |
+          sudo apt update
           sudo apt install nginx
           sudo systemctl start nginx
           sudo systemctl status nginx
