--- a/.github/workflows/10_php_artisan_test_from_zip_archive.yml
+++ b/.github/workflows/10_php_artisan_test_from_zip_archive.yml
@@ -31,44 +31,15 @@ jobs:
           unzip archive.zip
           ls -la
           rm -rf archive.zip
-          unzip build*.zip
+          unzip -q build*.zip
           ls -la
+          rm -rf build*.zip
 
-#      # https://github.com/actions/checkout
-#      - uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 1
-#
-#      # https://github.com/actions/cache
-#      - name: Cache composer dependencies
-#        uses: actions/cache@v4
-#        with:
-#          path: vendor
-#          key: composer-${{ hashFiles('**/composer.lock') }}
-#          restore-keys: |
-#            composer-
-#
-#      # https://github.com/shivammathur/setup-php
-#      - name: Install PHP
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: 8.3
-#
-#      - name: Install composer dependencies
-#        run: |
-#          composer install --no-scripts
-#
-#      - name: Prepare Laravel Application
-#        run: |
-#          cp .env.ci .env
-#          php artisan key:generate
-#          php artisan migrate
-#
-#      - name: Install NPM dependencies
-#        run: npm install
-#
-#      - name: Compile assets
-#        run: npm run build
-#
-#      - name: Run Test suite
-#        run: php artisan test
+      - name: Prepare Laravel Application
+        run: |
+          cp .env.ci .env
+          php artisan key:generate
+          php artisan migrate
+
+      - name: Run Test suite
+        run: php artisan test
