--- a/.github/workflows/09_create_zip_build_artifact.yml
+++ b/.github/workflows/09_create_zip_build_artifact.yml
@@ -59,4 +59,5 @@ jobs:
       - name: Kick Off Testing Workflow
         run: |
           gh workflow run 10_php_artisan_test_from_zip_archive.yml -f zip_artifact_id=${{ steps.upload_artifact.outputs.artifact-id }}
-
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
