--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -71,4 +71,6 @@ jobs:
           ls -la
           cd dist
           ls -la
+          cd ${{ steps.create_zip_file.outputs.version }}
+          ls -la
 
