--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      version_str: ${{ steps.create_zip_file.version }}
 
     steps:
       - uses: actions/checkout@v4
@@ -60,6 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ build ]
     steps:
+      - env:
+          VERSION_STR: ${{needs.build.outputs.version_str}}
+
       - name: Download archive
         uses: actions/download-artifact@v4
         with:
@@ -73,8 +78,8 @@ jobs:
           cd dist
           pwd
           ls -la
-          echo ${{ steps.create_zip_file.outputs.version }}
-          cd ${{ steps.create_zip_file.outputs.version }}
+          echo ${{ VERSION_STR }}
+          cd ${{ VERSION_STR }}
           pwd
           ls -la
 
