--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -117,18 +117,11 @@ jobs:
           name: ${{ env.VERSION_STR }}
 
       - name: SCP the archive to the server
-        uses: easingthemes/ssh-deploy@v2.1.4
+        uses: pierrickdelrieu/scp-action@v0.1.0
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          ARGS: "-rlgoDzvc -i --delete"
-          SOURCE: "build*.zip"
-          REMOTE_HOST: 54.234.109.36
-          REMOTE_USER: demo_1
-          TARGET: "/home/demo_1/deployments/"
-          SCRIPT_BEFORE: |
-            whoami
-            ls -al
-          SCRIPT_AFTER: |
-            whoami
-            ls -al
-            echo $RSYNC_STDOUT
+          host: 54.234.109.36
+          ssh_port: 22
+          ssh_username: demo_1
+          ssh_key: ${{ secrets.PRIVATE_KEY }}
+          destination_dir: /home/demo_1/deployments/test
+          rm: false
