--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -104,7 +104,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ test ]
+    needs: [ build ]
 
     env:
       VERSION_STR: ${{needs.build.outputs.version_str}}
@@ -117,7 +117,7 @@ jobs:
           name: ${{ env.VERSION_STR }}
 
       - name: SCP the archive to the server
-        uses: pierrickdelrieu/scp-action@v0.1.0
+        uses: pierrickdelrieu/scp-action@lastest
         with:
           host: 54.234.109.36
           ssh_port: 22
