--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Compile assets
         run: npm run build
 
+      - name: Sign the code
+        run: php artisan app:sign-code
+
       - name: Create zip file
         id: create_zip_file
         run: |
