--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -107,7 +107,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build ]
+    needs: [ test ]
 
     env:
       VERSION_STR: ${{needs.build.outputs.version_str}}
