--- a/.github/workflows/12_build_scan_test_deploy.yml
+++ b/.github/workflows/12_build_scan_test_deploy.yml
@@ -1,4 +1,4 @@
-name: 12_build_test_deploy
+name: 12_build_scan_test_deploy
 on:
   workflow_dispatch:
 
@@ -60,6 +60,49 @@ jobs:
           name: ${{ steps.create_zip_file.outputs.version }}
           path: |
             dist
+  scan:
+    name: Run PHPMD scanning
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    permissions:
+      contents: read # for checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+
+    env:
+      VERSION_STR: ${{needs.build.outputs.version_str}}
+
+    steps:
+      - name: Show version string
+        run: echo ${{ env.VERSION_STR }}
+
+      - name: Download archive
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.VERSION_STR }}
+
+      - name: Unzip the archive
+        run: |
+          unzip -q build*.zip
+          ls -la
+          rm -rf build*.zip
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          coverage: none
+          tools: phpmd
+
+      - name: Run PHPMD
+        run: phpmd . sarif codesize --reportfile phpmd-results.sarif
+        continue-on-error: true
+
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: phpmd-results.sarif
+          wait-for-processing: true
 
   test:
     runs-on: ubuntu-latest
@@ -110,7 +153,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build, test ]
+    needs: [ build, scan, test ]
 
     env:
       VERSION_STR: ${{needs.build.outputs.version_str}}
