--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -120,7 +120,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build, scan, test ]
+    needs: [ build, test ]
 
     env:
       VERSION_STR: ${{needs.build.outputs.version_str}}
