--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -8,6 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version_str: ${{ steps.create_zip_file.outputs.version }}
+    permissions:
+      contents: read # for checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     steps:
       - uses: actions/checkout@v4
