--- a/.github/workflows/08_php_psalm.yml
+++ b/.github/workflows/08_php_psalm.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   PHPMD:
-    name: Run PHPMD scanning
+    name: Run php psalm
     runs-on: ubuntu-latest
     permissions:
       contents: read # for checkout to fetch code
@@ -19,6 +19,12 @@ jobs:
       # https://github.com/actions/checkout
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # https://github.com/shivammathur/setup-php
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
 
       # https://github.com/marketplace/actions/psalm-static-analysis-for-php
       - name: Psalm
