--- a/.github/workflows/08_php_psalm.yml
+++ b/.github/workflows/08_php_psalm.yml
@@ -25,6 +25,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.3
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, opcache, sodium
 
       - name: Install composer dependencies
         run: |
