--- a/.github/workflows/08_php_psalm.yml
+++ b/.github/workflows/08_php_psalm.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Psalm
         uses: docker://ghcr.io/psalm/psalm-github-actions
         with:
+          composer_ignore_platform_reqs: true
           security_analysis: true
           report_file: results.sarif
 
