--- a/.github/workflows/04_simple_deploy_with_ssh.yml
+++ b/.github/workflows/04_simple_deploy_with_ssh.yml
@@ -6,7 +6,7 @@ jobs:
   deploy:
     name: Deploy to Demo 1
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Configure SSH
         run: |
