--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -56,7 +56,9 @@ jobs:
         run: npm run build
 
       - name: Sign the code
-        run: php artisan app:sign-code
+        run: |
+          sudo apt install md5deep
+          php artisan app:sign-code
 
       - name: Create zip file
         id: create_zip_file
