--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/horizon": "^5.23",
+        "laravel/pulse": "@beta",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
