--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -156,7 +156,7 @@ jobs:
       - name: SCP the archive to the server
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{var.HOST}}
+          host: ${{vars.HOST}}
           username: demo_1
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
@@ -166,7 +166,7 @@ jobs:
       - name: Deploy the archive
         uses: appleboy/ssh-action@master
         with:
-          host: ${{var.HOST}}
+          host: ${{vars.HOST}}
           port: 22
           username: demo_1
           key: ${{secrets.PRIVATE_KEY}}
