--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -166,7 +166,7 @@ jobs:
       - name: Deploy the archive
         uses: appleboy/ssh-action@master
         with:
-          host: 18.208.211.221
+          host: ${{vars.production.HOST}}
           port: 22
           username: demo_1
           key: ${{secrets.PRIVATE_KEY}}
