--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -156,7 +156,7 @@ jobs:
       - name: SCP the archive to the server
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: 18.208.211.221
+          host: ${{ secrets.HOST }}
           username: demo_1
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
@@ -166,10 +166,10 @@ jobs:
       - name: Deploy the archive
         uses: appleboy/ssh-action@master
         with:
-          host: ${{vars.production.HOST}}
+          host: ${{ secrets.HOST }}
           port: 22
           username: demo_1
-          key: ${{secrets.PRIVATE_KEY}}
+          key: ${{ secrets.PRIVATE_KEY }}
           script: "/usr/local/bin/devops/deploy/deploy.sh"
 
 
