--- a/.github/workflows/05_simple_deploy.yml
+++ b/.github/workflows/05_simple_deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{var.HOST}}
+          host: ${{ secrets.HOST }}
           port: 22
           username: demo_1
           key: ${{secrets.PRIVATE_KEY}}
