--- a/.github/workflows/12_build_test_deploy.yml
+++ b/.github/workflows/12_build_test_deploy.yml
@@ -1,8 +1,8 @@
 name: 12_build_test_deploy
 
-on: [ push, pull_request ]
-#on:
-#  workflow_dispatch:
+#on: [ push, pull_request ]
+on:
+  workflow_dispatch:
 
 permissions:
   contents: read
